--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.3.28",
     "gsap": "^3.12.5",
+    "particles.js": "^2.0.0",
+    "postcss": "^8.4.41",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.12",
+    "tailwindcss": "^3.4.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
