--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.12",
     "tailwindcss": "^3.4.10",
+    "three": "^0.169.0",
+    "three-stdlib": "^2.33.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
